fix board overflow

--- a/react-snowpack/src/App.css
+++ b/react-snowpack/src/App.css
@@ -1,5 +1,4 @@
 .board {
-  height: 80vh;
   overflow: hidden;
   border: 1px solid black;
 }
